fixed styles for the graphic that has the wrong font-size

--- a/static/styles/_project.scss
+++ b/static/styles/_project.scss
@@ -76,6 +76,11 @@ p {
     margin: 2em auto;
     padding: 0 10px;
 }
+.too-big {
+  img {
+    max-width: 80%;
+  }
+}
 
 .float-img-container {
   max-width: 735px;
@@ -957,9 +962,9 @@ button {
 // opinion styles
 
 #homelesscontainer {
-  width: 100%; 
-  height: 600px; 
-  overflow: hidden; 
+  width: 100%;
+  height: 600px;
+  overflow: hidden;
   background: linear-gradient(rgba(0,0,0,0.2), white 99%);
 }
 
@@ -1006,11 +1011,11 @@ button {
 }
 
 .h2-opinion {
-  font-size: 100px; 
-  line-height: 1; 
-  margin-top: -50px; 
-  margin-bottom: 0; 
-  color: black; 
+  font-size: 100px;
+  line-height: 1;
+  margin-top: -50px;
+  margin-bottom: 0;
+  color: black;
   text-align: center;
 
     @media screen and (max-width: 860px) {
